@@ -1,12 +1,8 @@
 Custom-screen-icon.png source=PhET author=Yuen-ying Carpenter
 dropper_background.png author=PhET notes=copied from beers-law-lab
 dropper_foreground.png author=PhET notes=copied from beers-law-lab
-H3O-majority.png author=PhET
-H3O-minority.png author=PhET
 Macro-screen-icon.png source=PhET author=Yuen-ying Carpenter
 Micro-screen-icon.png source=PhET author=Yuen-ying Carpenter
-OH-majority.png author=PhET
-OH-minority.png author=PhET
 pH-meter-probe.png author=PhET notes=copied from beers-law-lab
 red_button_disabled.png author=PhET notes=copied from beers-law-lab
 red_button_pressed.png author=PhET notes=copied from beers-law-lab
