@@ -1,3 +1,4 @@
+3/4/14 ratio: use scenery to create molecule images, which are then drawn directly to canvas
 3/4/14 delete node-per-molecule strategy from 'ratio' feature since it's unusably slow
 3/4/14 increase performance of 'ratio' feature by using drawImage instead of arc
 3/4/14 tweak spacing in 'H3O+/OH-' label
